Fix code overflow in list items

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -194,7 +194,7 @@ img {
           border-radius: 4px;
 }
 
-.highlight > pre {
+.highlight > pre, pre.highlight {
   overflow: auto;
 }
 
